# gimp-avif-plugin

./: README.md  README.txt  build_file-avif.sh  meson.build
ext/: build_local_libaom_libavif.sh
src/: file-avif-dialog.c  file-avif-dialog.h  file-avif-exif.cpp  file-avif-exif.h  file-avif-load.c  file-avif-load.h  file-avif-save.c  file-avif-save.h  file-avif.c  hlgCurveBinary.h  meson.build  pqCurveBinary.h
